# OpenKiwi

./: .buildinfo  .editorconfig  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLI.html  CONTRIBUTING.md  LICENSE  README.md  configuration.html  contributing.html  flags.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  reproduce.html  requirements.txt  search.html  searchindex.js  setup.cfg  tox.ini  usage.html
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.gitlab/issue_templates/: Bug.md  Feature.md  Improvement.md  Model.md
.streamlit/: config.toml
_modules/: index.html
_modules/kiwi/: loggers.html
_modules/kiwi/cli/: better_argparse.html  main.html  opts.html
_modules/kiwi/data/: builders.html  corpus.html  iterators.html  qe_dataset.html  tokenizers.html  utils.html  vectors.html  vocabulary.html
_modules/kiwi/lib/: evaluate.html  jackknife.html  (+4 more)
_sources/: contributing.rst.txt  index.rst.txt  installation.rst.txt  quickstart.md.txt  reproduce.rst.txt  usage.rst.txt
_sources/cli/: jackknife.rst.txt  predict.rst.txt  train_predictor.rst.txt
_sources/configuration/: evaluate.rst.txt  index.rst.txt  predict.rst.txt
_sources/source/: kiwi.cli.models.rst.txt  kiwi.cli.pipelines.rst.txt  kiwi.cli.rst.txt  kiwi.data.fields.rst.txt  kiwi.data.fieldsets.rst.txt  kiwi.data.rst.txt  kiwi.lib.rst.txt  kiwi.metrics.rst.txt  kiwi.models.linear.rst.txt  kiwi.models.modules.rst.txt  kiwi.models.rst.txt  kiwi.predictors.rst.txt  kiwi.rst.txt  kiwi.trainers.rst.txt  modules.rst.txt
_sources/systems/: index.rst.txt
_static/: documentation_options.js
autoapi/: index.html
autoapi/kiwi/: index.html
cli/: evaluate.html  jackknife.html  predict.html  predict_linear.html  predict_nuqe.html  predict_predictor_estimator.html  predict_quetch.html  train.html  train_linear.html  train_nuqe.html  train_predictor.html  train_predictor_estimator.html  train_quetch.html
config/: bert.yaml  evaluate.yaml  nuqe.yaml  predict.yaml  predictor.yaml  predictor_estimator.yaml  search.yaml  xlm.yaml  xlmroberta.yaml
config/data/: wmt19.qe.en_de.yaml  wmt20.qe.en_de.yaml  wmt20.qe.en_zh.yaml
configuration/: evaluate.html  index.html  predict.html  search.html  train.html
demo/: KiwiViz.ipynb  app.py  utils.py
docs/: CLI.rst  conf.py  configuration.rst  contributing.md  contributing.rst  flags.rst  index.rst  installation.rst  quickstart.md  reproduce.rst  test.json  testing.md  usage.md  usage.rst
docs/autoapi/: index.rst
docs/cli/: evaluate.rst  jackknife.rst  predict.rst  predict_nuqe.rst  predict_quetch.rst  train.rst  train_linear.rst  train_predictor_estimator.rst  train_quetch.rst
docs/configuration/: index.rst  search.rst  train.rst
docs/contributing/: contributing.rst
docs/evaluate/: evaluate.rst
docs/jackknife/: jackknife.rst
docs/predict/: predict.rst  predict_linear.rst  predict_nuqe.rst  predict_predictor_estimator.rst  predict_quetch.rst
docs/train/: train.rst  train_linear.rst  train_nuqe.rst  train_predictor.rst  train_predictor_estimator.rst  train_quetch.rst
experiments/: evaluate_estimator.yaml  evaluate_nuqe.yaml  predict_estimator.yaml  predict_nuqe.yaml  search_predest.yaml  train_estimator.yaml  train_nuqe.yaml  train_predictor.yaml
experiments/examples/: train_nuqe.yaml  train_predest.yaml  train_predictor.yaml
experiments/predest/: predest-predict.yaml  predict_18.yaml  predictor.yaml
kiwi/: __init__.py  __main__.py  cli.py  constants.py  loggers.py  runner.py
kiwi/cli/: better_argparse.py  main.py  opts.py
kiwi/data/: batch.py  builders.py  corpus.py  forgetful_defaultdict.py  iterators.py  qe_dataset.py  tokenizers.py  utils.py  vectors.py  vocabulary.py
kiwi/lib/: __init__.py  evaluate.py  jackknife.py  predict.py  preprocess.py  pretrain.py  search.py  train.py  utils.py
kiwi/metrics/: __init__.py  functions.py  metrics.py  stats.py
kiwi/models/: linear_word_qe_classifier.py  model.py  nuqe.py  predictor.py  predictor_estimator.py  quetch.py  utils.py
kiwi/modules/: sentence_level_output.py  token_embeddings.py  word_level_output.py
kiwi/predictors/: linear_tester.py  predictor.py
kiwi/systems/: __init__.py  _meta_module.py  bert.py  nuqe.py  predictor.py  predictor_estimator.py  qe_system.py  tlm_system.py  xlm.py  xlmroberta.py
kiwi/trainers/: __init__.py  callbacks.py  linear_word_qe_trainer.py  trainer.py  utils.py
kiwi/training/: callbacks.py  optimizers.py
kiwi/utils/: data_structures.py  io.py  tensors.py
scripts/: convert_parsed_to_postags.py  ensemble.py  eval_all.sh  evaluate.py  extract_columns.py  extract_parse_ngram_columns.sh  merge_target_and_gaps_preds.py  noisy.py  run_all.sh  run_all_pipelines_nuqe.sh  run_linear.sh  run_nuqe.sh  run_pe.sh  run_quetch.sh  stack_probabilities_for_linear.py  stack_two_predictors.sh  ter.py
scripts/ape-qe/: ape_utils.sh  env.sh  eval_ape.sh  eval_qe.sh  jackknife.py  jackknife.sh  oversample.py  preprocess-train-corpus.sh  preprocess-wmt-corpus.sh  tag_to_id.sh  translate_jackknife.sh
scripts/generate_tags/: 18_to_17.py  generate_tags.sh
source/: kiwi.cli.html  kiwi.cli.models.html  kiwi.cli.pipelines.html  kiwi.data.fields.html  kiwi.data.fieldsets.html  kiwi.data.html  kiwi.html  kiwi.lib.html  kiwi.metrics.html  kiwi.models.html  kiwi.models.linear.html  kiwi.models.modules.html  kiwi.predictors.html  kiwi.trainers.html  modules.html
systems/: index.html
tests/: conftest.py  test_bert.py  test_cli.py  test_cli_jackknife.t  test_cli_main.t  test_cli_train.t  test_data.py  test_data_builders.py  test_forgetful_defaultdict.py  test_linear.py  test_metrics.py  test_migrations.py  test_model.py  test_model_config.py  test_nuqe.py  test_nuqe_18.py  test_predest.py  test_predict_and_evaluate.py  test_predictor.py  test_preprocess_predest.py  test_qe_dataset.py  test_quetch.py  test_quetch_18.py  test_search.py  test_utils.py  test_write_read_config_files.py  test_xlm.py  test_xlmr.py
tests/mocks/: mock_vocab.py  simple_model.py
tests/toy-data/: nuqe-train.yaml
(+473 files in other folders)
