# Configuration file as per PEP 518
# https://www.python.org/dev/peps/pep-0518/

[tool.poetry]
name = "unbabel-kiwi"
version = "0.2.0"
description = "Machine Translation Quality Estimation Toolkit"
authors = ["AI Research, Unbabel <ai-research@unbabel.com>"]
license = "Other/Proprietary License"

readme = 'README.md'

homepage = 'https://gitlab.com/Unbabel/Kiwi'
repository = 'https://gitlab.com/Unbabel/Kiwi'
documentation = 'https://gitlab.com/Unbabel/Kiwi'

keywords = ['Unbabel', 'OpenKiwi', 'Quality Estimation', 'Machine Translation']

classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Framework :: PyTorch',
    'Intended Audience :: Science/Research',
#    'License :: Other/Proprietary License',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]

packages = [
    {include = "kiwi"},
]

include = ['pyproject.toml', 'CHANGELOG', 'LICENSE', 'CONTRIBUTING.md']
#exclude = []


[tool.poetry.scripts]
kiwi = 'kiwi.__main__:main'


[tool.poetry.dependencies]
python = "^3.5"
torch = ">= 0.4.1"
torchtext = "^0.3.1"
tqdm = "^4.29"
configargparse = "^0.14.0"
numpy = "^1.16"
more-itertools = "^5.0"
mlflow = "~0.8"
seaborn = {version = "^0.9.0",optional = true}
polyglot = {version = "^16.7",optional = true}
pathlib2 = {version = "^2.3",python = "3.5"}


[tool.poetry.dev-dependencies]
tox = "^3.7"
pytest = "^4.1"
flake8 = "^3.6"
isort = "^4.3"
coverage = "^4.5"
sphinx = "^1.8"
sphinx-argparse = "^0.2.5"
m2r = "^0.2.1"
yapf = {version = "^0.25.0",allows-prereleases = true,python = "~3.5"}
black = {version = "^18.3-alpha.3",allows-prereleases = true,python = "^3.6"}
bump2version = "^0.5.10"


[tool.poetry.extras]
embeddings = ["polyglot"]
plots = ["seaborn"]


[tool.black]
line-length = 80  # Changed from default 88
# You probably noticed the peculiar default line length. Black defaults
# to 88 characters per line, which happens to be 10% over 80. This number was
# found to produce significantly shorter files than sticking with 80 (the most
# popular), or even 79 (used by the standard library). In general, 90-ish
# seems like the wise choice: https://youtu.be/wf-BqAjZb8M?t=260.
skip-string-normalization = true  # Don't switch to double quotes
py36 = false
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
