# Configuration file as per PEP 518
# https://www.python.org/dev/peps/pep-0518/

[tool.poetry]
name = "openkiwi"
version = "0.1.3"
description = "Machine Translation Quality Estimation Toolkit"
authors = ["AI Research, Unbabel <openkiwi@unbabel.com>"]
license = "AGPL-3.0"
readme = 'README.md'
homepage = 'https://github.com/Unbabel/OpenKiwi'
repository = 'https://github.com/Unbabel/OpenKiwi'
documentation = 'https://unbabel.github.io/OpenKiwi/'
keywords = ['OpenKiwi', 'Quality Estimation', 'Machine Translation', 'Unbabel']
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
packages = [
    {include = "kiwi"},
]
include = ['pyproject.toml', 'CHANGELOG', 'LICENSE', 'CONTRIBUTING.md']


[tool.poetry.scripts]
kiwi = 'kiwi.__main__:main'


[tool.poetry.dependencies]
python = "^3.5"
torch = ">= 0.4.1"
torchtext = "^0.3.1"
tqdm = "^4.29"
configargparse = "^0.14.0"
numpy = "^1.16"
more-itertools = "^5.0"
scipy = "^1.2"
pyyaml = "^3.13"
pathlib2 = {version = "^2.3",python = "3.5"}
mlflow = {version = "~0.8",optional = true}
seaborn = {version = "^0.9.0",optional = true}
polyglot = {version = "^16.7",optional = true}


[tool.poetry.dev-dependencies]
bump2version = "^0.5.10"
tox = "^3.7"
pytest = "^4.1"
flake8 = "^3.6"
isort = "^4.3"
coverage = "^4.5"
sphinx = "^1.8"
sphinx-argparse = "^0.2.5"
m2r = "^0.2.1"
sphinx_rtd_theme = "^0.4.3"
yapf = {version = "^0.25.0",allows-prereleases = true,python = "~3.5"}
black = {version = "^18.9-beta.0",allows-prereleases = true,python = "^3.6"}


[tool.poetry.extras]
embeddings = ["polyglot"]
plots = ["seaborn"]
mlflow = ["mlflow"]


[tool.black]
line-length = 80  # Changed from default 88
# You probably noticed the peculiar default line length. Black defaults
# to 88 characters per line, which happens to be 10% over 80. This number was
# found to produce significantly shorter files than sticking with 80 (the most
# popular), or even 79 (used by the standard library). In general, 90-ish
# seems like the wise choice: https://youtu.be/wf-BqAjZb8M?t=260.
skip-string-normalization = true  # Don't switch to double quotes
py36 = false
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | build
  | dist
)/
'''


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
