# Configuration file as per PEP 518
# https://www.python.org/dev/peps/pep-0518/

[tool.poetry]
name = "openkiwi"
version = "2.0.0"
description = "Machine Translation Quality Estimation Toolkit"
authors = ["AI Research, Unbabel <openkiwi@unbabel.com>"]
license = "AGPL-3.0"
readme = 'README.md'
homepage = 'https://github.com/Unbabel/OpenKiwi'
repository = 'https://github.com/Unbabel/OpenKiwi'
documentation = 'https://unbabel.github.io/OpenKiwi'
keywords = ['OpenKiwi', 'Quality Estimation', 'Machine Translation', 'Unbabel']
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
packages = [
    {include = "kiwi"},
]
include = ['pyproject.toml', 'CHANGELOG.md', 'LICENSE', 'CONTRIBUTING.md']


[tool.poetry.scripts]
kiwi = 'kiwi.__main__:main'


[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.4.0"
tqdm = "^4.29"
numpy = "^1.18"
more-itertools = "^8.0.0"
scipy = "^1.2"
pyyaml = "^5.1.2"
pytorch-nlp = "^0.5.0"
transformers = "^3.0.2"
pydantic = "^1.5"
docopt = "^0.6.2"
omegaconf = "^1.4.1"
typing-extensions = "^3.7.4"
hydra-core = "^0.11.3"
pytorch-lightning = "^0.8.4"
mlflow = {version = "^1.8.0",optional = true}
seaborn = {version = "^0.9.0",optional = true}
polyglot = {version = "^16.7",optional = true}
optuna = "^2.2.0"


[tool.poetry.dev-dependencies]
tox = "^3.7"
pytest = "^4.1"
flake8 = "^3.8"
isort = "^4.3"
black = {version = "^19.10-beta.0",allow-prereleases = true}
pytest-cov = "^2.8.1"
pytest-sugar = "^0.9.3"
sphinx = "^3.0"
recommonmark = "^0.6.0"
m2r = "^0.2.1"
sphinx-autodoc-typehints = "^1.10.3"
sphinx-autoapi = "^1.3.0"
sphinx-paramlinks = "^0.4.1"
pydata-sphinx-theme = "^0.2.2"


[tool.poetry.extras]
embeddings = ["polyglot"]
plots = ["seaborn"]
mlflow = ["mlflow"]

[tool.black]
skip-string-normalization = true  # Don't switch to double quotes
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
